--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-util": "^3.0.4",
-    "gulp-webserver": "^0.9.0",
     "node-neat": "^1.7.2"
+  },
+  "dependencies": {
+    "connect": "^3.4.0",
+    "connect-route": "^0.1.5",
+    "request": "^2.67.0",
+    "serve-static": "^1.10.0"
   }
 }
