--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "connect-route": "^0.1.5",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "google-auth-library": "^0.9.7",
     "googleapis": "^2.1.7",
-    "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
+    "gulp": "^3.9.1",
     "request": "^2.67.0",
     "serve-static": "^1.10.0"
   }
